@@ -6,6 +6,9 @@ This file lists the changes in each six version.
 Development version
 -------------------
 
+- Issue #47: Fix add_metaclass on classes with a string for the __slots__
+  variable.
+
 - Issue #44: Fix interpretation of backslashes on Python 2 in the u() function.
 
 - Pull request #21: Add import mapping for urllib's proxy_bypass function.
